# loofta-payroll

./: .gitignore  DEPLOYMENT.md  Dockerfile.railway  FLOW.md  PAYMENT_SAFETY.md  README.md  package-lock.json  package.json  railway.json  tsconfig.json  turbo.json  vercel.json
apps/backend/: Dockerfile  PAYMENT_AUDIT.md  PRIVY_WALLET_SETUP.md  README.md  env.template  nest-cli.json  package-lock.json  package.json  railway.json  tsconfig.json
apps/backend/src/: app.module.ts  main.ts
apps/backend/src/auth/: privy-auth.guard.ts  privy-user.decorator.ts
apps/backend/src/database/: supabase.service.spec.ts  supabase.service.ts
apps/backend/src/lib/: api-client.ts
apps/backend/src/redis/: redis.service.spec.ts  redis.service.ts
apps/backend/src/types/: database.types.ts
apps/backend/supabase/: config.toml  schema_claims.sql  seed.sql
apps/backend/supabase/migrations/: 20240101000001_create_users_table.sql  20260119_create_payroll_orgs.sql  (+35 more)
apps/backend/test/: app.e2e-spec.ts  setup.ts
apps/frontend/: empty-module.js  env.example  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/frontend/public/: tonconnect-manifest.json
contracts/payroll-attestation/: Cargo.toml  DEPLOY_NEAR.md  PRIVACY.md  README.md  deploy-mainnet.sh  deploy.sh  rust-toolchain.toml
contracts/payroll-attestation/.cargo/: config.toml
contracts/payroll-attestation/src/: lib.rs
contracts/payroll-receipt-logger/: Cargo.toml  README.md
contracts/payroll-receipt-logger/src/: lib.rs
docs/: HACKATHON_SUBMISSION.md
supabase/migrations/: create_payroll_tables.sql
(+257 files in other folders)
