[package]
name = "payroll-receipt-logger"
version = "0.1.0"
edition = "2021"
description = "NEAR contract: immutable audit log for payroll runs. Stores batch hash only (no amounts)."

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "4.1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = "symbols"
